--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -9,13 +9,13 @@
 
 
   <div class='calendar'>
-    <% @week_days.each do |day| %>
+    <%@week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
-          <% day[:month] %>/<% day[:date] %>
+          <%=day[:month] %>/<%=day[:date] %>
         </div>
         <ul class='content'>
-          <% day[:plans].each do |plan| %>
+          <%day[:plans].each do |plan| %>
             <li class='plan-list'>・<%= plan %></li>
           <% end %>
         </ul>
