--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -5,20 +5,17 @@
     <%= f.text_field :plan, class: 'text-input' %>
     <%= f.submit '保存' %>
 <% end %>
-
 <div class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
-          <%=day[:month] %>/<%=day[:date] %><%=day[:wday]%>
+          <% day[:month] %>/<% day[:date] %>
         </div>
         <ul class='content'>
-
           <% day[:plans].each do |plan| %>
             <li class='plan-list'>・<%= plan %></li>
           <% end %>
         </ul>
       </div>
     <% end %>
-
 </div>
